# yeneta-ai-school

./: .env  .gitignore  ACADEMIC_PERFORMANCE_DASHBOARD_COMPLETE.md  ACADEMIC_PERFORMANCE_DASHBOARD_STRATEGIC_PLAN.md  ACTION_CHECKLIST.md  ADMIN_COMMUNICATION_LOG_IMPLEMENTATION.md  ADMIN_COMMUNICATION_TESTING.md  ADMIN_RECORDER_FIX.md  AI_CHAPTER_ASSISTANT_ENHANCEMENT_COMPLETE.md  AI_CHAPTER_ASSISTANT_SMART_OBJECTIVES_GENERATION.md  AI_CLASSROOM_ENHANCED_IMPLEMENTATION.md  AI_CLASSROOM_IMPLEMENTATION.md  AI_CLASSROOM_IMPLEMENTATION_SUMMARY.md  AI_CLASSROOM_QUICK_START.md  AI_TUTOR_ENHANCEMENTS.md  AI_TUTOR_FIX.md  AI_TUTOR_FULL_CHAPTER_EXTRACTION_COMPLETE.md  AI_TUTOR_GRADE_SUBJECT_SELECTORS.md  AI_TUTOR_HOTFIX.md  AI_TUTOR_RAG_ENHANCEMENT_COMPLETE.md  AI_TUTOR_RAG_IMPLEMENTATION.md  AI_TUTOR_STREAM_SELECTOR_FIX.md  ALL_FIXES_SUMMARY.md  API_KEY_CRITICAL_FIXES.md  API_KEY_DB_VERIFICATION.md  API_KEY_DECORATOR_FIX.md  API_KEY_DISPLAY_FEATURE.md  API_KEY_IMPLEMENTATION_GUIDE.md  API_RESPONSE_FIX_COMPLETE.md  ASSIGNMENT_DESCRIPTION_GENERATOR_COMPLETE.md  ASSIGNMENT_FILTER_FIX.md  ASSIGNMENT_SUBMISSION_FLOW_COMPLETE.md  ATTACHMENT_TESTING_GUIDE.md  AUDIT_FILES_REVIEWED.md  App.tsx  BACKEND_SETUP.md  BROWSER_COMPATIBILITY_GUIDE.md  BUGFIX_KEYERROR_PREFERENCE.md  BUILD_WARNING_EXPLANATION.md  BUTTON_INACTIVE_TROUBLESHOOTING.md  (+498 more)
components/: Card.tsx  Header.tsx  ImageGenerationModeSelector.tsx  Layout.tsx  NotificationDisplay.tsx  Routes.tsx  Sidebar.tsx
contexts/: AIClassroomContext.tsx  AuthContext.tsx  DashboardContext.tsx  EngagementContext.tsx  ImageGenerationContext.tsx  (+5 more)
(+589 files in other folders)
